[gd_scene load_steps=12 format=3 uid="uid://c0257e6y177n7"]

[ext_resource type="Script" path="res://Scenes/Environments/UI Scenes/Dialogue/DialogueSystem3D/Scripts/DialogueSystem.gd" id="1_2unn5"]
[ext_resource type="Script" path="res://Scenes/Environments/UI Scenes/Dialogue/DialogueSystem3D/Scripts/MessageManager.gd" id="2_6010u"]
[ext_resource type="Texture2D" uid="uid://4jfbhr1nfjxl" path="res://Scenes/Environments/World Scenes/Test Environment/Assets/VerBust.png" id="2_m8nl7"]
[ext_resource type="PackedScene" uid="uid://ii5vtlsoq22g" path="res://Scenes/Environments/UI Scenes/Dialogue/DialogueSystem3D/SpeechBubble.tscn" id="4_byvbx"]
[ext_resource type="Script" path="res://Scenes/Environments/UI Scenes/Dialogue/DialogueSystem3D/Scripts/ConversationManager.gd" id="4_kf0sc"]
[ext_resource type="Texture2D" uid="uid://dv7qc8k3f8gf3" path="res://Scenes/Environments/UI Scenes/Dialogue/DialogueSystem3D/Assets/SmallBubble.png" id="5_ds87g"]
[ext_resource type="Script" path="res://Scenes/Environments/UI Scenes/Dialogue/DialogueSystem3D/Scripts/SpeakerManager.gd" id="5_quxcn"]

[sub_resource type="QuadMesh" id="QuadMesh_hadbc"]
size = Vector2(2.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3qd5u"]
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("5_ds87g")

[sub_resource type="QuadMesh" id="QuadMesh_5n3vf"]
size = Vector2(2.5, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_udh34"]
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("2_m8nl7")

[node name="DialogueSystem" type="Node3D"]
script = ExtResource("1_2unn5")

[node name="MessageManager" type="Node3D" parent="."]
script = ExtResource("2_6010u")

[node name="NewMessageAnchor" type="Node3D" parent="MessageManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -3, 1.2)

[node name="BubbleAnchor" type="Node3D" parent="MessageManager/NewMessageAnchor"]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 4, 0, 0)

[node name="SpeechBubble" parent="MessageManager/NewMessageAnchor/BubbleAnchor" instance=ExtResource("4_byvbx")]

[node name="MessageAnchor" type="Node3D" parent="MessageManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 1)

[node name="BubbleAnchor" type="Node3D" parent="MessageManager/MessageAnchor"]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 4, 0, 0)

[node name="SpeechBubble" parent="MessageManager/MessageAnchor/BubbleAnchor" instance=ExtResource("4_byvbx")]
skeleton = NodePath("../../../../..")

[node name="MessageAnchor2" type="Node3D" parent="MessageManager"]
transform = Transform3D(0.866026, -0.5, 0, 0.5, 0.866026, 0, 0, 0, 1, -5, 0, 0.8)

[node name="BubbleAnchor" type="Node3D" parent="MessageManager/MessageAnchor2"]
transform = Transform3D(1.06252, 0.284701, 0, -0.284701, 1.06252, 0, 0, 0, 1.1, 4, 0, 0)

[node name="SpeechBubble" parent="MessageManager/MessageAnchor2/BubbleAnchor" instance=ExtResource("4_byvbx")]

[node name="MessageAnchor3" type="Node3D" parent="MessageManager"]
transform = Transform3D(0.5, -0.866026, 0, 0.866026, 0.5, 0, 0, 0, 1, -5, 0, 0.6)

[node name="BubbleAnchor" type="Node3D" parent="MessageManager/MessageAnchor3"]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, 4, 0, 0)

[node name="SpeechBubble" parent="MessageManager/MessageAnchor3/BubbleAnchor" instance=ExtResource("4_byvbx")]

[node name="MessageAnchor4" type="Node3D" parent="MessageManager"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -5, 0, 0.4)

[node name="BubbleAnchor" type="Node3D" parent="MessageManager/MessageAnchor4"]
transform = Transform3D(0.636396, 0.636396, 0, -0.636396, 0.636396, 0, 0, 0, 0.9, 4, 0, 0)

[node name="SpeechBubble" parent="MessageManager/MessageAnchor4/BubbleAnchor" instance=ExtResource("4_byvbx")]

[node name="DeleteMessageAnchor" type="Node3D" parent="MessageManager"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -5, 0, 0)

[node name="BubbleAnchor" type="Node3D" parent="MessageManager/DeleteMessageAnchor"]
transform = Transform3D(0.636396, 0.636396, 0, -0.636396, 0.636396, 0, 0, 0, 0.9, 4, 0, 0)

[node name="SpeechBubble" parent="MessageManager/DeleteMessageAnchor/BubbleAnchor" instance=ExtResource("4_byvbx")]
visible = false

[node name="ConversationManager" type="Node3D" parent="."]
script = ExtResource("4_kf0sc")

[node name="ChoiceManager" type="Node3D" parent="."]
visible = false

[node name="Choice1" type="Node3D" parent="ChoiceManager"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 5, 0, 1)

[node name="SpeechBubble" type="MeshInstance3D" parent="ChoiceManager/Choice1"]
transform = Transform3D(0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0, 1, 0, 2, 0)
layers = 32
mesh = SubResource("QuadMesh_hadbc")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3qd5u")

[node name="Label3D" type="Label3D" parent="ChoiceManager/Choice1/SpeechBubble"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
layers = 32
pixel_size = 0.006
shaded = true
alpha_cut = 2
render_priority = 2
outline_render_priority = 1
modulate = Color(0.120299, 0.0730803, 0.036252, 1)
outline_modulate = Color(0.121569, 0.0745098, 0.0352941, 1)
text = "Go Back."
font_size = 60
outline_size = 4
line_spacing = -15.0
autowrap_mode = 2
width = 450.0

[node name="Choice2" type="Node3D" parent="ChoiceManager"]
transform = Transform3D(0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0, 1, 5, 0, 0.8)

[node name="SpeechBubble" type="MeshInstance3D" parent="ChoiceManager/Choice2"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0, 2.5, 0)
layers = 32
mesh = SubResource("QuadMesh_hadbc")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3qd5u")

[node name="Label3D" type="Label3D" parent="ChoiceManager/Choice2/SpeechBubble"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
layers = 32
pixel_size = 0.006
shaded = true
alpha_cut = 2
render_priority = 2
outline_render_priority = 1
modulate = Color(0.120299, 0.0730803, 0.036252, 1)
outline_modulate = Color(0.121569, 0.0745098, 0.0352941, 1)
text = "Yes!"
font_size = 60
outline_size = 4
line_spacing = -15.0
autowrap_mode = 2
width = 450.0

[node name="Choice3" type="Node3D" parent="ChoiceManager"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 5, 0, 0.6)

[node name="SpeechBubble" type="MeshInstance3D" parent="ChoiceManager/Choice3"]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, 0, 3, 0)
layers = 32
mesh = SubResource("QuadMesh_hadbc")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3qd5u")

[node name="Label3D" type="Label3D" parent="ChoiceManager/Choice3/SpeechBubble"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
layers = 32
pixel_size = 0.006
shaded = true
alpha_cut = 2
render_priority = 2
outline_render_priority = 1
modulate = Color(0.120299, 0.0730803, 0.036252, 1)
outline_modulate = Color(0.121569, 0.0745098, 0.0352941, 1)
text = "Maybe..."
font_size = 60
outline_size = 4
line_spacing = -15.0
autowrap_mode = 2
width = 450.0

[node name="Choice4" type="Node3D" parent="ChoiceManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0.4)

[node name="SpeechBubble" type="MeshInstance3D" parent="ChoiceManager/Choice4"]
transform = Transform3D(0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0, 1, 0, 3.5, 0)
layers = 32
mesh = SubResource("QuadMesh_hadbc")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3qd5u")

[node name="Label3D" type="Label3D" parent="ChoiceManager/Choice4/SpeechBubble"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
layers = 32
pixel_size = 0.006
shaded = true
alpha_cut = 2
render_priority = 2
outline_render_priority = 1
modulate = Color(0.120299, 0.0730803, 0.036252, 1)
outline_modulate = Color(0.121569, 0.0745098, 0.0352941, 1)
text = "No."
font_size = 60
outline_size = 4
line_spacing = -15.0
autowrap_mode = 2
width = 450.0

[node name="SpeakerManager" type="Node3D" parent="."]
script = ExtResource("5_quxcn")

[node name="CharBust" type="MeshInstance3D" parent="SpeakerManager"]
transform = Transform3D(-1.2, 0, -1.04907e-07, 0, 1.2, 0, 1.04907e-07, 0, -1.2, -5, 0, 1.2)
layers = 32
mesh = SubResource("QuadMesh_5n3vf")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_udh34")

[node name="SpotLight3D" type="SpotLight3D" parent="SpeakerManager/CharBust"]
transform = Transform3D(-0.833333, 0, -7.28523e-08, 0, 0.833333, 0, 7.28523e-08, 0, -0.833333, 0, -0.5, -2.5)
layers = 32
light_energy = 3.0
spot_angle_attenuation = 0.0693483

[node name="PlayerBust" type="MeshInstance3D" parent="SpeakerManager"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 5, 0, 1.2)
visible = false
layers = 32
mesh = SubResource("QuadMesh_5n3vf")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_udh34")

[node name="SpotLight3D" type="SpotLight3D" parent="SpeakerManager/PlayerBust"]
transform = Transform3D(0.833333, 0, 0, 0, 0.833333, 0, 0, 0, 0.833333, 0, -0.5, 2.5)
layers = 32
light_energy = 3.0
spot_angle_attenuation = 0.0693483

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 16)
light_energy = 80.0
shadow_enabled = true
shadow_blur = 3.0
spot_range = 17.0
spot_attenuation = 0.85
spot_angle = 30.0
spot_angle_attenuation = 0.0883886
